# old_stuff

Multiphysique/: CMakeLists.txt  FE2.cpp  FE2.h  NewtonRaphson.cpp  NewtonRaphson.h  README.md  README_COUPLING.txt  README_FE2.txt  devenv-codeblocks.bat  devenv-vs2012.bat  fem.cpp  fem.h  gmshio.cpp  gmshio.h  main.cpp  physicalio.cpp  physicalio.h  stack.cpp  stack.h
Multiphysique/geo/: Anisotrope  Anisotrope.msh  Anisotrope.phy  Arnst.geo  carreSimple.geo  carreSimple.msh  carreSimple.phy  cercle.geo  cercle.msh  cercle.phy  honeyComb.geo  honeyComb.msh  honeyComb.phy  l.geo  l.msh  l.phy
Tfe/: .gitattributes  .gitignore  README.md
Tfe/ddm/: Helmholtz_error.pro  Maxwell.pro
Tfe/ddm/circle_pie/: circle_pie.pro  circle_pie_data.geo
Tfe/ddm/circle_pie error/: Helmholtz_error.pro  Schwarz.pro  circle_pie.pro
Tfe/ddm/circle_pie/geo/: circle_pie.geo
Tfe/ddm/ground/: ground.pro
Tfe/ddm/sphere_pie/: sphere_pie.pro
Tfe/ddm/sphere_pie error/: SchwarzMacros.pro  sphere_pie.pro
Tfe/ddm/sphere_pie/geo/: sphere_pie.geo
Tfe/include/gmsh/: GmshConfig.h
Tfe/salt/: main.cpp  salt
Tfe/salt/ground/: Helmholtz.pro  ground.pro
XFEM/: .gitignore  CMakeLists.txt  analytical.cpp  analytical.h  basicFunctions.cpp  basicFunctions.h  bessel.cpp  bessel.h  computationTools.cpp  computationTools.h  error.cpp  error.h  fem.cpp  fem.h  gauss.h  lagrange.cpp  lagrange.h  main.cpp  struct.h  test.cpp  test.h  xfem.cpp  xfem.h
XFEM/include/gmsh/: GmshVersion.h
